force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__WorkData__c/agf__WorkData__c.object-meta.xml
<CustomObject>
    <label>WorkData</label>
    <nameField>
        <displayFormat>WD-{0000}</displayFormat>
        <label>WorkData Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WorkData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>