force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__WorkData__c/fields/agf__StatusOfWork__c.field-meta.xml
<CustomField>
    <fullName>agf__StatusOfWork__c</fullName>
    <label>StatusOfWork</label>
    <length>25</length>
    <type>Text</type>
</CustomField>