force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__WorkData__c/fields/agf__UserId__c.field-meta.xml
<CustomField>
    <fullName>agf__UserId__c</fullName>
    <label>UserId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>