force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__WorkData__c/fields/agf__Value__c.field-meta.xml
<CustomField>
    <fullName>agf__Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>