force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__WorkData__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>agf__Date__c</columns>
    <columns>agf__StatusOfWork__c</columns>
    <columns>agf__UserId__c</columns>
    <columns>agf__Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>